# TutorX

./: .coverage  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_ANALYSIS.md  README.md  app.py  client.py  main.py  pyproject.toml  requirements.txt  run.py  run_tests.py
.github/workflows/: main.yml
deployment/: Dockerfile  Dockerfile.web  docker-compose.yml
docs/: AI_INTEGRATION_FEATURES.md  API.md  ENHANCED_ADAPTIVE_LEARNING_GEMINI.md  FIXES_SUMMARY.md  GRADIO_THEME_COLOR_FIXES.md  NEW_ADAPTIVE_LEARNING_README.md  UI_UX_ENHANCEMENTS.md  UI_UX_IMPROVEMENTS_SUMMARY.md  api.md  deployment.md  prd.md
mcp_server/: __init__.py  mcp_instance.py  requirements.txt  server.py  setup.py  vercel.json
mcp_server/model/: __init__.py  gemini_flash.py
mcp_server/models/: __init__.py  student_profile.py
mcp_server/prompts/: quiz_generation.txt
mcp_server/resources/: concept_graph.py  curriculum_standards.py
mcp_server/storage/: __init__.py  memory_store.py
mcp_server/tools/: __init__.py  ai_tutor_tools.py  concept_graph_tools.py  concept_tools.py  content_generation_tools.py  interaction_tools.py  lesson_tools.py  (+3 more)
tests/: __init__.py  ocr_app.py  test_ai_integration.py  test_app_integration.py  test_client.py  test_enhanced_adaptive_learning.py  test_import.py  test_interactive_quiz.py  test_mcp_connection.py  test_mcp_server.py  test_new_adaptive_learning.py  test_tools_integration.py  test_ui_enhancements.py  test_upload_ocr.py  test_utils.py
utils/: __init__.py  assessment.py  gamification.py  integrations.py  multimodal.py
